k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: welcome-app
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
