k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome
  namespace: welcome-app
spec:
  type: LoadBalancer
  selector:
    app: welcome
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
